@@ -63,154 +63,152 @@ import de.viadee.bpm.vPAV.processing.model.data.CheckerIssue;
  */
 public class DmnTaskCheckerTest {
 
-    private static final String BASE_PATH = "src/test/resources/";
+  private static final String BASE_PATH = "src/test/resources/";
 
-    private static DmnTaskChecker checker;
+  private static DmnTaskChecker checker;
 
-    private static ClassLoader cl;
+  private static ClassLoader cl;
 
-    private final Rule rule = new Rule("DmnTaskChecker", true, null, null, null, null);
+  private final Rule rule = new Rule("DmnTaskChecker", true, null, null, null, null);
 
-    @BeforeClass
-    public static void setup() throws MalformedURLException {
-        final File file = new File(".");
-        final String currentPath = file.toURI().toURL().toString();
-        final URL classUrl = new URL(currentPath + "src/test/java");
-        final URL[] classUrls = { classUrl };
-        cl = new URLClassLoader(classUrls);
-        RuntimeConfig.getInstance().setClassLoader(cl);
-        RuntimeConfig.getInstance().getResource("en_US");
+  @BeforeClass
+  public static void setup() throws MalformedURLException {
+    final File file = new File(".");
+    final String currentPath = file.toURI().toURL().toString();
+    final URL classUrl = new URL(currentPath + "src/test/java");
+    final URL[] classUrls = {classUrl};
+    cl = new URLClassLoader(classUrls);
+    RuntimeConfig.getInstance().setClassLoader(cl);
+    RuntimeConfig.getInstance().getResource("en_US");
+  }
+
+  /**
+   * Case: DMN task with correct DMN-File
+   *
+   * @throws IOException
+   * @throws SAXException
+   * @throws ParserConfigurationException
+   * @throws XPathExpressionException
+   *
+   */
+  @Test
+  public void testCorrectDMN()
+      throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
+    final String PATH = BASE_PATH + "DmnTaskCheckerTest_CorrectDMN.bpmn";
+    checker = new DmnTaskChecker(rule, new BpmnScanner(PATH));
+
+    // parse bpmn model
+    final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+
+    final Collection<BusinessRuleTask> baseElements =
+        modelInstance.getModelElementsByType(BusinessRuleTask.class);
+
+    final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next());
+
+    final Collection<CheckerIssue> issues = checker.check(element);
+
+    if (issues.size() > 0) {
+      Assert.fail("correct DMN-File generates an issue");
     }
+  }
 
-    /**
-     * Case: DMN task with correct DMN-File
-     *
-     * @throws IOException
-     * @throws SAXException
-     * @throws ParserConfigurationException
-     * @throws XPathExpressionException
-     *
-     */
+  /**
+   * Case: DMN task without a reference should produce an error
+   *
+   * @throws IOException
+   * @throws SAXException
+   * @throws ParserConfigurationException
+   * @throws XPathExpressionException
+   *
+   */
+  @Test
+  public void testDMNTaskWithoutReference()
+      throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
+    final String PATH = BASE_PATH + "DmnTaskCheckerTest_WrongDmnTask.bpmn";
+    checker = new DmnTaskChecker(rule, new BpmnScanner(PATH));
 
-    @Test
-    public void testCorrectDMN()
-            throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
-        final String PATH = BASE_PATH + "DmnTaskCheckerTest_CorrectDMN.bpmn";
-        checker = new DmnTaskChecker(rule, new BpmnScanner(PATH));
+    // parse bpmn model
+    final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+    final Collection<BusinessRuleTask> baseElements =
+        modelInstance.getModelElementsByType(BusinessRuleTask.class);
 
-        final Collection<BusinessRuleTask> baseElements = modelInstance
-                .getModelElementsByType(BusinessRuleTask.class);
+    final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next());
+    final BaseElement baseElement = element.getBaseElement();
 
-        final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next());
+    final Collection<CheckerIssue> issues = checker.check(element);
 
-        final Collection<CheckerIssue> issues = checker.check(element);
-
-        if (issues.size() > 0) {
-            Assert.fail("correct DMN-File generates an issue");
-        }
+    if (issues.size() != 1) {
+      Assert.fail("collection with the issues is bigger or smaller as expected");
+    } else {
+      Assert.assertEquals(
+          "Task '" + CheckName.checkName(baseElement) + "' with no dmn reference.",
+          issues.iterator().next().getMessage());
     }
+  }
 
-    /**
-     * Case: DMN task without a reference should produce an error
-     *
-     * @throws IOException
-     * @throws SAXException
-     * @throws ParserConfigurationException
-     * @throws XPathExpressionException
-     *
-     */
+  /**
+   * Case: DMN task with wrong DMN-File
+   *
+   * @throws IOException
+   * @throws SAXException
+   * @throws ParserConfigurationException
+   * @throws XPathExpressionException
+   *
+   */
+  @Test
+  public void testDMNTaskWithWrongDMN()
+      throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
+    final String PATH = BASE_PATH + "DmnTaskCheckerTest_wrongDMNReference.bpmn";
+    checker = new DmnTaskChecker(rule, new BpmnScanner(PATH));
 
-    @Test
-    public void testDMNTaskWithoutReference()
-            throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
-        final String PATH = BASE_PATH + "DmnTaskCheckerTest_WrongDmnTask.bpmn";
-        checker = new DmnTaskChecker(rule, new BpmnScanner(PATH));
+    // parse bpmn model
+    final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+    final Collection<BusinessRuleTask> baseElements =
+        modelInstance.getModelElementsByType(BusinessRuleTask.class);
 
-        final Collection<BusinessRuleTask> baseElements = modelInstance
-                .getModelElementsByType(BusinessRuleTask.class);
+    final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next());
+    final BaseElement baseElement = element.getBaseElement();
 
-        final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next());
-        final BaseElement baseElement = element.getBaseElement();
+    final Collection<CheckerIssue> issues = checker.check(element);
 
-        final Collection<CheckerIssue> issues = checker.check(element);
-
-        if (issues.size() != 1) {
-            Assert.fail("collection with the issues is bigger or smaller as expected");
-        } else {
-            Assert.assertEquals("Task '" + CheckName.checkName(baseElement) + "' with no dmn reference.",
-                    issues.iterator().next().getMessage());
-        }
+    if (issues.size() != 1) {
+      Assert.fail("collection with the issues is bigger or smaller as expected");
+    } else {
+      Assert.assertEquals(
+          "Dmn file for task '" + CheckName.checkName(baseElement) + "' not found.",
+          issues.iterator().next().getMessage());
     }
+  }
 
-    /**
-     * Case: DMN task with wrong DMN-File
-     *
-     * @throws IOException
-     * @throws SAXException
-     * @throws ParserConfigurationException
-     * @throws XPathExpressionException
-     *
-     */
+  /**
+   * Case: read referenced DMN
+   *
+   * @throws IOException
+   * @throws SAXException
+   * @throws ParserConfigurationException
+   * @throws XPathExpressionException
+   *
+   */
+  @Test
+  public void testReadReferencedDMNFile()
+      throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
+    final String PATH = BASE_PATH + "DmnTaskCheckerTest_ReadReferencedDMN.bpmn";
+    checker = new DmnTaskChecker(rule, new BpmnScanner(PATH));
 
-    @Test
-    public void testDMNTaskWithWrongDMN()
-            throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
-        final String PATH = BASE_PATH + "DmnTaskCheckerTest_wrongDMNReference.bpmn";
-        checker = new DmnTaskChecker(rule, new BpmnScanner(PATH));
+    // parse bpmn model
+    final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+    final Collection<BusinessRuleTask> baseElements =
+        modelInstance.getModelElementsByType(BusinessRuleTask.class);
 
-        final Collection<BusinessRuleTask> baseElements = modelInstance
-                .getModelElementsByType(BusinessRuleTask.class);
+    final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next());
 
-        final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next());
-        final BaseElement baseElement = element.getBaseElement();
+    final Collection<CheckerIssue> issues = checker.check(element);
 
-        final Collection<CheckerIssue> issues = checker.check(element);
-
-        if (issues.size() != 1) {
-            Assert.fail("collection with the issues is bigger or smaller as expected");
-        } else {
-            Assert.assertEquals("Dmn file for task '" + CheckName.checkName(baseElement) + "' not found.",
-                    issues.iterator().next().getMessage());
-        }
+    if (issues.size() > 1) {
+      Assert.fail("collection with the issues is bigger or smaller as expected");
     }
-
-    /**
-     * Case: read referenced DMN
-     *
-     * @throws IOException
-     * @throws SAXException
-     * @throws ParserConfigurationException
-     * @throws XPathExpressionException
-     *
-     */
-
-    @Test
-    public void testReadReferencedDMNFile()
-            throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
-        final String PATH = BASE_PATH + "DmnTaskCheckerTest_ReadReferencedDMN.bpmn";
-        checker = new DmnTaskChecker(rule, new BpmnScanner(PATH));
-
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
-
-        final Collection<BusinessRuleTask> baseElements = modelInstance
-                .getModelElementsByType(BusinessRuleTask.class);
-
-        final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next());
-
-        final Collection<CheckerIssue> issues = checker.check(element);
-
-        if (issues.size() > 1) {
-            Assert.fail("collection with the issues is bigger or smaller as expected");
-        }
-    }
+  }
 }
