@@ -55,112 +55,118 @@ import de.viadee.bpm.vPAV.processing.model.data.CheckerIssue;
 
 public class ElementIdConventionCheckerTest {
 
-    private static final String BASE_PATH = "src/test/resources/";
+  private static final String BASE_PATH = "src/test/resources/";
 
-    private static ElementChecker checker;
+  private static ElementChecker checker;
 
-    private static ClassLoader cl;
+  private static ClassLoader cl;
 
-    @BeforeClass
-    public static void setup() throws MalformedURLException {
-        checker = new ElementIdConventionChecker(createRule(), null);
-        final File file = new File(".");
-        final String currentPath = file.toURI().toURL().toString();
-        final URL classUrl = new URL(currentPath + "src/test/java/");
-        final URL[] classUrls = { classUrl };
-        cl = new URLClassLoader(classUrls);
-        RuntimeConfig.getInstance().setClassLoader(cl);
-        RuntimeConfig.getInstance().getResource("en_US");
+  @BeforeClass
+  public static void setup() throws MalformedURLException {
+    checker = new ElementIdConventionChecker(createRule(), null);
+    final File file = new File(".");
+    final String currentPath = file.toURI().toURL().toString();
+    final URL classUrl = new URL(currentPath + "src/test/java/");
+    final URL[] classUrls = {classUrl};
+    cl = new URLClassLoader(classUrls);
+    RuntimeConfig.getInstance().setClassLoader(cl);
+    RuntimeConfig.getInstance().getResource("en_US");
+  }
+
+  /**
+   * Case 1: Recognise a Id that fits the naming convention
+   */
+  @Test
+  public void testCorrectTaskNamingConvention() {
+    final String PATH = BASE_PATH + "ElementIdConventionCheckerTest_CorrectIdConvention.bpmn";
+
+    // parse bpmn model
+    final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+
+    final Collection<BaseElement> baseElements =
+        modelInstance.getModelElementsByType(BaseElement.class);
+
+    final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
+    for (final BaseElement baseElement : baseElements) {
+      final BpmnElement element = new BpmnElement(PATH, baseElement);
+      issues.addAll(checker.check(element));
     }
 
-    /**
-     * Case 1: Recognise a Id that fits the naming convention
-     */
-    @Test
-    public void testCorrectTaskNamingConvention() {
-        final String PATH = BASE_PATH
-                + "ElementIdConventionCheckerTest_CorrectIdConvention.bpmn";
-
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
-
-        final Collection<BaseElement> baseElements = modelInstance
-                .getModelElementsByType(BaseElement.class);
-
-        final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
-        for (final BaseElement baseElement : baseElements) {
-            final BpmnElement element = new BpmnElement(PATH, baseElement);
-            issues.addAll(checker.check(element));
-        }
-
-        if (issues.size() > 0) {
-            fail("There are issues, altough the convention is correct.");
-        }
+    if (issues.size() > 0) {
+      fail("There are issues, altough the convention is correct.");
     }
+  }
 
-    /**
-     * Case 2: Recognise a violation against the naming convention
-     */
-    @Test
-    public void testWrongTaskNamingConvention() {
-        final String PATH = BASE_PATH
-                + "ElementIdConventionCheckerTest_WrongIdConvention.bpmn";
+  /**
+   * Case 2: Recognise a violation against the naming convention
+   */
+  @Test
+  public void testWrongTaskNamingConvention() {
+    final String PATH = BASE_PATH + "ElementIdConventionCheckerTest_WrongIdConvention.bpmn";
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+    // parse bpmn model
+    final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        final Collection<BaseElement> baseElements = modelInstance
-                .getModelElementsByType(BaseElement.class);
+    final Collection<BaseElement> baseElements =
+        modelInstance.getModelElementsByType(BaseElement.class);
 
-        final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
-        for (final BaseElement baseElement : baseElements) {
-            final BpmnElement element = new BpmnElement(PATH, baseElement);
-            issues.addAll(checker.check(element));
-        }
-        assertEquals("The issue wasn't recognised", 1, issues.size());
+    final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
+    for (final BaseElement baseElement : baseElements) {
+      final BpmnElement element = new BpmnElement(PATH, baseElement);
+      issues.addAll(checker.check(element));
     }
+    assertEquals("The issue wasn't recognised", 1, issues.size());
+  }
 
-    /**
-     * Case 3: Recognise two violations against the naming convention
-     */
-    @Test
-    public void testWrongTaskNamingConventions() {
-        final String PATH = BASE_PATH
-                + "ElementIdConventionCheckerTest_WrongIdConventions.bpmn";
+  /**
+   * Case 3: Recognise two violations against the naming convention
+   */
+  @Test
+  public void testWrongTaskNamingConventions() {
+    final String PATH = BASE_PATH + "ElementIdConventionCheckerTest_WrongIdConventions.bpmn";
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+    // parse bpmn model
+    final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        final Collection<BaseElement> baseElements = modelInstance
-                .getModelElementsByType(BaseElement.class);
+    final Collection<BaseElement> baseElements =
+        modelInstance.getModelElementsByType(BaseElement.class);
 
-        final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
-        for (final BaseElement baseElement : baseElements) {
-            final BpmnElement element = new BpmnElement(PATH, baseElement);
-            issues.addAll(checker.check(element));
-        }
-        assertEquals("The issue wasn't recognised", 2, issues.size());
+    final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
+    for (final BaseElement baseElement : baseElements) {
+      final BpmnElement element = new BpmnElement(PATH, baseElement);
+      issues.addAll(checker.check(element));
     }
+    assertEquals("The issue wasn't recognised", 2, issues.size());
+  }
 
-    /**
-     * Creates rule configuration
-     * 
-     * @return rule
-     */
-    private static Rule createRule() {
+  /**
+   * Creates rule configuration
+   *
+   * @return rule
+   */
+  private static Rule createRule() {
 
-        final Collection<ElementConvention> elementConventions = new ArrayList<ElementConvention>();
+    final Collection<ElementConvention> elementConventions = new ArrayList<ElementConvention>();
 
-        final ElementConvention elementConventionService = new ElementConvention("ServiceTask", null, null,
-                "serviceTask[A-Z]([A-Z0-9]*[a-z][a-z0-9]*[A-Z]|[a-z0-9]*[A-Z][A-Z0-9]*[a-z])[A-Za-z0-9]*");
-        final ElementConvention elementConventionUser = new ElementConvention("UserTask", null, null,
-                "userTask[A-Z]([A-Z0-9]*[a-z][a-z0-9]*[A-Z]|[a-z0-9]*[A-Z][A-Z0-9]*[a-z])[A-Za-z0-9]*");
+    final ElementConvention elementConventionService =
+        new ElementConvention(
+            "ServiceTask",
+            null,
+            null,
+            "serviceTask[A-Z]([A-Z0-9]*[a-z][a-z0-9]*[A-Z]|[a-z0-9]*[A-Z][A-Z0-9]*[a-z])[A-Za-z0-9]*");
+    final ElementConvention elementConventionUser =
+        new ElementConvention(
+            "UserTask",
+            null,
+            null,
+            "userTask[A-Z]([A-Z0-9]*[a-z][a-z0-9]*[A-Z]|[a-z0-9]*[A-Z][A-Z0-9]*[a-z])[A-Za-z0-9]*");
 
-        elementConventions.add(elementConventionService);
-        elementConventions.add(elementConventionUser);
+    elementConventions.add(elementConventionService);
+    elementConventions.add(elementConventionUser);
 
-        final Rule rule = new Rule("ElementIdConventionChecker", true, null, null, elementConventions, null);
+    final Rule rule =
+        new Rule("ElementIdConventionChecker", true, null, null, elementConventions, null);
 
-        return rule;
-    }
+    return rule;
+  }
 }
