@@ -55,87 +55,88 @@ import de.viadee.bpm.vPAV.processing.model.data.CheckerIssue;
 
 public class TaskNamingConventionCheckerTest {
 
-    private static final String BASE_PATH = "src/test/resources/";
+  private static final String BASE_PATH = "src/test/resources/";
 
-    private static ElementChecker checker;
+  private static ElementChecker checker;
 
-    private static ClassLoader cl;
+  private static ClassLoader cl;
 
-    @BeforeClass
-    public static void setup() throws MalformedURLException {
-        checker = new TaskNamingConventionChecker(createRule(), null);
-        final File file = new File(".");
-        final String currentPath = file.toURI().toURL().toString();
-        final URL classUrl = new URL(currentPath + "src/test/java/");
-        final URL[] classUrls = { classUrl };
-        cl = new URLClassLoader(classUrls);
-        RuntimeConfig.getInstance().setClassLoader(cl);
-        RuntimeConfig.getInstance().getResource("en_US");
+  @BeforeClass
+  public static void setup() throws MalformedURLException {
+    checker = new TaskNamingConventionChecker(createRule(), null);
+    final File file = new File(".");
+    final String currentPath = file.toURI().toURL().toString();
+    final URL classUrl = new URL(currentPath + "src/test/java/");
+    final URL[] classUrls = {classUrl};
+    cl = new URLClassLoader(classUrls);
+    RuntimeConfig.getInstance().setClassLoader(cl);
+    RuntimeConfig.getInstance().getResource("en_US");
+  }
+
+  /**
+   * Case 1: Recognise a task name that fits the naming convention
+   */
+  @Test
+  public void testCorrectTaskNamingConvention() {
+    final String PATH =
+        BASE_PATH + "TaskNamingConventionCheckerTest_CorrectTaskNamingConvention.bpmn";
+
+    // parse bpmn model
+    final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+
+    final Collection<BaseElement> baseElements =
+        modelInstance.getModelElementsByType(BaseElement.class);
+
+    final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
+    for (final BaseElement baseElement : baseElements) {
+      final BpmnElement element = new BpmnElement(PATH, baseElement);
+      issues.addAll(checker.check(element));
     }
 
-    /**
-     * Case 1: Recognise a task name that fits the naming convention
-     */
-    @Test
-    public void testCorrectTaskNamingConvention() {
-        final String PATH = BASE_PATH
-                + "TaskNamingConventionCheckerTest_CorrectTaskNamingConvention.bpmn";
+    if (issues.size() > 0) {
+      fail("There are issues, altough the convention is correct.");
+    }
+  }
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+  /**
+   * Case 2: Recognise a violation against the naming convention
+   */
+  @Test
+  public void testWrongTaskNamingConvention() {
+    final String PATH =
+        BASE_PATH + "TaskNamingConventionCheckerTest_WrongTaskNamingConvention.bpmn";
 
-        final Collection<BaseElement> baseElements = modelInstance
-                .getModelElementsByType(BaseElement.class);
+    // parse bpmn model
+    final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
-        for (final BaseElement baseElement : baseElements) {
-            final BpmnElement element = new BpmnElement(PATH, baseElement);
-            issues.addAll(checker.check(element));
-        }
+    final Collection<BaseElement> baseElements =
+        modelInstance.getModelElementsByType(BaseElement.class);
 
-        if (issues.size() > 0) {
-            fail("There are issues, altough the convention is correct.");
-        }
+    final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
+    for (final BaseElement baseElement : baseElements) {
+      final BpmnElement element = new BpmnElement(PATH, baseElement);
+      issues.addAll(checker.check(element));
     }
 
-    /**
-     * Case 2: Recognise a violation against the naming convention
-     */
-    @Test
-    public void testWrongTaskNamingConvention() {
-        final String PATH = BASE_PATH
-                + "TaskNamingConventionCheckerTest_WrongTaskNamingConvention.bpmn";
+    assertEquals("The issue wasn't recognised", 1, issues.size());
+  }
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+  /**
+   * Creates rule configuration
+   *
+   * @return rule
+   */
+  private static Rule createRule() {
 
-        final Collection<BaseElement> baseElements = modelInstance
-                .getModelElementsByType(BaseElement.class);
+    final Collection<ElementConvention> elementConventions = new ArrayList<ElementConvention>();
 
-        final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
-        for (final BaseElement baseElement : baseElements) {
-            final BpmnElement element = new BpmnElement(PATH, baseElement);
-            issues.addAll(checker.check(element));
-        }
+    final ElementConvention elementConvention =
+        new ElementConvention("convention", null, null, "[A-ZÄÖÜ][a-zäöü\\-\\s]+");
+    elementConventions.add(elementConvention);
 
-        assertEquals("The issue wasn't recognised", 1, issues.size());
-    }
+    final Rule rule =
+        new Rule("TaskNamingConventionChecker", true, null, null, elementConventions, null);
 
-    /**
-     * Creates rule configuration
-     * 
-     * @return rule
-     */
-    private static Rule createRule() {
-
-        final Collection<ElementConvention> elementConventions = new ArrayList<ElementConvention>();
-
-        final ElementConvention elementConvention = new ElementConvention("convention", null, null,
-                "[A-ZÄÖÜ][a-zäöü\\-\\s]+");
-        elementConventions.add(elementConvention);
-
-        final Rule rule = new Rule("TaskNamingConventionChecker", true, null, null, elementConventions, null);
-
-        return rule;
-    }
+    return rule;
+  }
 }
