@@ -58,51 +58,52 @@ import de.viadee.bpm.vPAV.processing.model.data.AnomalyContainer;
 
 public class LoopAnalysisTest {
 
-    private static final String BASE_PATH = "src/test/resources/";
+  private static final String BASE_PATH = "src/test/resources/";
 
-    private static ClassLoader cl;
+  private static ClassLoader cl;
 
-    @BeforeClass
-    public static void setup() throws MalformedURLException {
-        final File file = new File(".");
-        final String currentPath = file.toURI().toURL().toString();
-        final URL classUrl = new URL(currentPath + "src/test/java");
-        final URL[] classUrls = { classUrl };
-        cl = new URLClassLoader(classUrls);
-        RuntimeConfig.getInstance().setClassLoader(cl);
-    }
+  @BeforeClass
+  public static void setup() throws MalformedURLException {
+    final File file = new File(".");
+    final String currentPath = file.toURI().toURL().toString();
+    final URL classUrl = new URL(currentPath + "src/test/java");
+    final URL[] classUrls = {classUrl};
+    cl = new URLClassLoader(classUrls);
+    RuntimeConfig.getInstance().setClassLoader(cl);
+  }
 
-    /**
-     * Case: Data flow graph creation and calculation of invalid paths
-     * 
-     * @throws IOException
-     * @throws SAXException
-     * @throws ParserConfigurationException
-     */
-    @Test
-    public void testLoop() throws ParserConfigurationException, SAXException, IOException {
-        final String PATH = BASE_PATH + "LoopAnalysisTest_TestLoop.bpmn";
-        final File processdefinition = new File(PATH);
+  /**
+   * Case: Data flow graph creation and calculation of invalid paths
+   *
+   * @throws IOException
+   * @throws SAXException
+   * @throws ParserConfigurationException
+   */
+  @Test
+  public void testLoop() throws ParserConfigurationException, SAXException, IOException {
+    final String PATH = BASE_PATH + "LoopAnalysisTest_TestLoop.bpmn";
+    final File processdefinition = new File(PATH);
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(processdefinition);
+    // parse bpmn model
+    final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(processdefinition);
 
-        final ElementGraphBuilder graphBuilder = new ElementGraphBuilder(new BpmnScanner(PATH));
-        // create data flow graphs
-        final Collection<IGraph> graphCollection = graphBuilder.createProcessGraph(modelInstance,
-                processdefinition.getPath(), new ArrayList<String>());
+    final ElementGraphBuilder graphBuilder = new ElementGraphBuilder(new BpmnScanner(PATH));
+    // create data flow graphs
+    final Collection<IGraph> graphCollection =
+        graphBuilder.createProcessGraph(
+            modelInstance, processdefinition.getPath(), new ArrayList<String>());
 
+    graphBuilder.createInvalidPaths(graphCollection);
+
+    // calculate invalid paths based on data flow graphs
+    final Map<AnomalyContainer, List<Path>> invalidPathMap =
         graphBuilder.createInvalidPaths(graphCollection);
 
-        // calculate invalid paths based on data flow graphs
-        final Map<AnomalyContainer, List<Path>> invalidPathMap = graphBuilder
-                .createInvalidPaths(graphCollection);
-
-        // get invalid paths
-        final List<Path> varTest = invalidPathMap
-                .get(new AnomalyContainer("dd", Anomaly.DD, "ServiceTask_1ev9i13", null));
-        Assert.assertEquals(
-                "[[ServiceTask_1ev9i13, SequenceFlow_0s4fyqh, ExclusiveGateway_1vhe4nv, SequenceFlow_12tyqqh, ExclusiveGateway_0utydka, SequenceFlow_0g3rb21, ServiceTask_1ev9i13]]",
-                varTest.toString());
-    }
+    // get invalid paths
+    final List<Path> varTest =
+        invalidPathMap.get(new AnomalyContainer("dd", Anomaly.DD, "ServiceTask_1ev9i13", null));
+    Assert.assertEquals(
+        "[[ServiceTask_1ev9i13, SequenceFlow_0s4fyqh, ExclusiveGateway_1vhe4nv, SequenceFlow_12tyqqh, ExclusiveGateway_0utydka, SequenceFlow_0g3rb21, ServiceTask_1ev9i13]]",
+        varTest.toString());
+  }
 }
